fix: fix table style on mobile devices

--- a/assets/styles/post.styl
+++ b/assets/styles/post.styl
@@ -387,8 +387,11 @@ margin-y($top, $bottom = $top)
     h5&
       font-size 14px
 
-    table&
-      display block
-      max-width 100%
-      width fit-content
-      overflow-x auto
+  table
+    display block
+    max-width 100%
+    width fit-content
+    overflow-x auto
+
+    table
+      display table
